--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -4,3 +4,7 @@ github:
   tooling_branch_name: main
 conda_build:
   pkg_format: '2'
+provider:
+  linux_ppc64le: default
+  linux_aarch64: default
+  osx_arm64: default
