--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "2.11.4" %}
+{% set version = "2.11.5" %}
 
 package:
   name: spot
@@ -6,10 +6,10 @@ package:
 
 source:
   url: http://www.lrde.epita.fr/dload/spot/spot-{{ version }}.tar.gz
-  sha256: 91ecac6202819ea1de4534902ce457ec6eec0573d730584d6494d06b0bcaa0b4
+  sha256: //www.lrde.epita.fr/dload/spot/spot-{{ version }}.tar.gz
 
 build:
-  number: 1
+  number: 0
   skip: true  # [win]
 
 requirements:
