--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -6,7 +6,7 @@ package:
 
 source:
   url: http://www.lrde.epita.fr/dload/spot/spot-{{ version }}.tar.gz
-  sha256: //www.lrde.epita.fr/dload/spot/spot-{{ version }}.tar.gz
+  sha256: 3acfd5cd112d00576ac234baeb34e1c6adf8c03155d4cda973e6317ac8bd1774
 
 build:
   number: 0
