--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,6 +1,4 @@
 build_platform:
-  linux_aarch64: linux_64
-  linux_ppc64le: linux_64
   osx_arm64: osx_64
 conda_build:
   pkg_format: '2'
@@ -12,4 +10,8 @@ provider:
   linux_aarch64: default
   linux_ppc64le: default
   osx_arm64: default
+os_version:
+  linux_64: cos7
+  linux_aarch64: cos7
+  linux_ppc64le: cos7
 test: native_and_emulated
